public interface Payable {
    public double calculateSalary();

    public void payTax(double amount);

}
